<resources>
    <string name="app_name">TokoBarang</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_your_account">"Let's  \nSign you in"</string>
    <string name="create_your_account">"Let's  \nCreate Your Account"</string>
    <string name="don_t_have_an_account_yet_register">Don\'t have an account yet? <b>Register</b></string>
    <string name="action_register">Register</string>
    <string name="say_hi">Hallo, \n%s</string>
    <string name="action_logout">Sign out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>